$Id$
===============================================================

221	Luke Howard <lukeh@padl.com>

	* AIX fix from <carlos.celso@embraer.com.br>
	  Recall #169033
	* support for nested groups
	* fix memory leak with private contexts

220	Luke Howard <lukeh@padl.com>

	* fix for BUG#169: getntohost() on Solaris
	* fix for BUG#170: _nss_ldap_getgroupsbymember_r fails
	  to return all groups when NSCD is running and
	  attribute mapping is enabled on Solaris
	* fix for BUG#173: reinstate use of sigaction()
	  (XXX what is the correct fix here?)
	* fix for BUG#174: innetgr() depth checking

218	Luke Howard <lukeh@padl.com>

	* fix for BUG#168: set errnop to ENOENT if not found
	* check for -lgssapi before -lgssapi_krb5

217	Luke Howard <lukeh@padl.com>
	
	* fix for BUG#167: compilation fails on Solaris

216	Luke Howard <lukeh@padl.com>

	* patch from Thorsten Kukuk to avoid overwriting
	  sockaddr storage for IPv6; use struct
	  sockaddr_storage if available
	* fix for BUG#153: use asynchronous search API
	  in initgroups()
	* fix for BUG#157: check for __pthread_once rather
	  than __pthread_atfork on glibc, as the latter is
	  no longer exported
	* fix for BUG#158: escape netgroup search filters
	  correctly
	* fix for BUG#161: remove redundant lock in
	  _nss_ldap_innetgr()
	* fix for BUG#164: set schema element array size
	  to LM_NONE + 1 not LM_NONE
	* fix for BUG#165: make _nss_ldap_result() private
	* fix for BUG#166: chase all nested netgroups in
	  innetgr()
	* fix deadlock if getXXXent() called without first
	  calling setXXXent()
	* only request gidNumber attribute when initgroups()
	  (avoids sending back rest of a group's entry)
	* don't request any attributes when mapping a user
	  to a DN (we want the DN only)

215	Luke Howard <lukeh@padl.com>

	* choose between using native GSS-API and putenv()
	  for setting ccache path
	* per-map attribute mapping for attributes that
	  appear in multiple maps

214	Luke Howard <lukeh@padl.com>
